库/XCGUI/xcgui.h


typedef void* HXCGUI;       
XC_API void WINAPI _xtrace(const char* pFormat, ...); 
XC_API void WINAPI _xtracew(const wchar_t* pFormat, ...); 
#define  XC_ID_ROOT            0   
#define  XC_ID_LAST           -3   
enum edit_type_     
{
	edit_type_none = 0,   
	edit_type_editor,     
	edit_type_richedit,   
	edit_type_chat,       
	edit_type_codeTable,  
};
enum ease_type_ 
{
	easeIn,      
	easeOut,     
	easeInOut,   
};
struct edit_data_copy_
{
	int  nCount;       
	int  nStyleCount;  
	edit_data_copy_style_* pStyle; 
	UINT* pData;       
};
struct editor_color_
{
	BOOL       bAlignLineArrow;            
	BOOL       bAlignLineBtnIndent;        
	BOOL       bTabFillColor;              
	BOOL       bAlignLineColor7;           
	COLORREF   clrMargin1;                 
	COLORREF   clrMargin2;                 
	COLORREF   clrMargin_text;             
	COLORREF   clrMargin_breakpoint;       
	COLORREF   clrMargin_breakpointBorder; 
	COLORREF   clrMargin_runRowArrow;      
	COLORREF   clrMargin_curRow;           
	COLORREF   clrMargin_error;            
	COLORREF   clrCurRowFull;       
	COLORREF   clrMatchSel;         
	COLORREF   clrAlignLines[7];    
	COLORREF   clrAlignLineSel;     
	COLORREF   clrFunSplitLine;     
	COLORREF   clrIndentTab;        
	COLORREF   clrIndentSpace;      
	COLORREF   clrTipsDlg;          
	COLORREF   clrTipsDlgBorder;    
	COLORREF   clrCallFunArgName;   
	int        funSplitLineMode;    
	int        codeIndent;          
	int       styleSys;             
	int       styleFunction;        
	int       styleVar;             
	int       styleDataType;        
	int       styleClass;           
	int       styleMacro;           
	int       styleEnum;            
	int       styleNumber;          
	int       styleString;          
	int       styleComment;         
	int       StylePunctuation;     
};
XC_API HELE WINAPI XEdit_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API HELE WINAPI XEdit_CreateEx(int x, int y, int cx, int cy, edit_type_ type, HXCGUI hParent=NULL);
XC_API void WINAPI XEdit_EnableAutoWrap(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEdit_EnableReadOnly(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEdit_EnableMultiLine(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEdit_EnablePassword(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEdit_EnableAutoSelAll(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEdit_EnableAutoCancelSel(HELE hEle, BOOL bEnable);
XC_API BOOL WINAPI XEdit_IsReadOnly(HELE hEle);
XC_API BOOL WINAPI XEdit_IsMultiLine(HELE hEle);
XC_API BOOL WINAPI XEdit_IsPassword(HELE hEle);
XC_API BOOL WINAPI XEdit_IsAutoWrap(HELE hEle);
XC_API BOOL WINAPI XEdit_IsEmpty(HELE hEle);
XC_API BOOL WINAPI XEdit_IsInSelect(HELE hEle, int iRow, int iCol);
XC_API int WINAPI XEdit_GetRowCount(HELE hEle);
XC_API edit_data_copy_* WINAPI XEdit_GetData(HELE hEle);
XC_API void WINAPI XEdit_AddData(HELE hEle, const edit_data_copy_* pData, USHORT* styleTable, int nStyleCount);
XC_API void WINAPI XEdit_FreeData(edit_data_copy_* pData);
XC_API void WINAPI XEdit_SetDefaultText(HELE hEle, const wchar_t* pString);
XC_API void WINAPI XEdit_SetDefaultTextColor(HELE hEle, COLORREF color);
XC_API void WINAPI XEdit_SetPasswordCharacter(HELE hEle, wchar_t ch);
XC_API void WINAPI XEdit_SetTextAlign(HELE hEle, int align);
XC_API void WINAPI XEdit_SetTabSpace(HELE hEle, int nSpace);
XC_API void WINAPI XEdit_SetText(HELE hEle, const wchar_t* pString);
XC_API void WINAPI XEdit_SetTextInt(HELE hEle, int nValue);
XC_API int WINAPI XEdit_GetText(HELE hEle, wchar_t* pOut, int nOutlen);
XC_API int WINAPI XEdit_GetTextRow(HELE hEle, int iRow, wchar_t* pOut, int nOutlen);
XC_API int WINAPI XEdit_GetLength(HELE hEle);
XC_API int WINAPI XEdit_GetLengthRow(HELE hEle, int iRow);
XC_API wchar_t WINAPI XEdit_GetAt(HELE hEle, int iRow, int iCol);
XC_API void WINAPI XEdit_InsertText(HELE hEle, int iRow, int iCol, const wchar_t* pString);
XC_API void WINAPI XEdit_AddText(HELE hEle, const wchar_t* pString);
XC_API void WINAPI XEdit_AddTextEx(HELE hEle, const wchar_t* pString, int iStyle);
XC_API int WINAPI XEdit_AddObject(HELE hEle, HXCGUI hObj);
XC_API void WINAPI XEdit_AddByStyle(HELE hEle, int iStyle);
XC_API int WINAPI XEdit_AddStyle(HELE hEle, HXCGUI hFont_image_Obj, COLORREF color, BOOL bColor);
XC_API BOOL WINAPI XAdTable_GetItemInt(HXCGUI hAdapter, int iRow, int iColumn, int* pOutValue);
XC_API BOOL WINAPI XAdTable_GetItemIntEx(HXCGUI hAdapter, int iRow, const wchar_t* pName, int* pOutValue);
XC_API BOOL WINAPI XAdTable_GetItemFloat(HXCGUI hAdapter, int iRow, int iColumn, float* pOutValue);
XC_API BOOL WINAPI XAdTable_GetItemFloatEx(HXCGUI hAdapter, int iRow, const wchar_t* pName, float* pOutValue);
XC_API HXCGUI WINAPI XAdMap_Create();
XC_API BOOL WINAPI XAdMap_AddItemText(HXCGUI hAdapter, const wchar_t* pName, const wchar_t* pValue);
XC_API BOOL WINAPI XAdMap_AddItemImage(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage);
XC_API BOOL WINAPI XAdMap_DeleteItem(HXCGUI hAdapter, const wchar_t* pName);
XC_API int WINAPI XAdMap_GetCount(HXCGUI hAdapter);
XC_API const wchar_t* WINAPI XAdMap_GetItemText(HXCGUI hAdapter, const wchar_t* pName);
XC_API HIMAGE WINAPI XAdMap_GetItemImage(HXCGUI hAdapter, const wchar_t* pName);
XC_API BOOL WINAPI XAdMap_SetItemText(HXCGUI hAdapter, const wchar_t* pName, const wchar_t* pValue);
XC_API BOOL WINAPI XAdMap_SetItemImage(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage);
XC_API HXCGUI WINAPI XAdTree_Create();
XC_API int WINAPI XAdTree_AddColumn(HXCGUI hAdapter, const wchar_t* pName);
XC_API int WINAPI XAdTree_SetColumn(HXCGUI hAdapter, const wchar_t* pColName);
XC_API int WINAPI XAdTree_InsertItemText(HXCGUI hAdapter, const wchar_t* pValue, int nParentID=XC_ID_ROOT, int insertID=XC_ID_LAST);
XC_API int WINAPI XAdTree_InsertItemTextEx(HXCGUI hAdapter, const wchar_t* pName, const wchar_t* pValue, int nParentID=XC_ID_ROOT, int insertID=XC_ID_LAST);
XC_API int WINAPI XAdTree_InsertItemImage(HXCGUI hAdapter, HIMAGE hImage, int nParentID=XC_ID_ROOT, int insertID=XC_ID_LAST);
XC_API int WINAPI XAdTree_InsertItemImageEx(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage, int nParentID=XC_ID_ROOT, int insertID=XC_ID_LAST);
XC_API int WINAPI XAdTree_GetCount(HXCGUI hAdapter);
XC_API int WINAPI XAdTree_GetCountColumn(HXCGUI hAdapter);
XC_API BOOL WINAPI XAdTree_SetItemText(HXCGUI hAdapter, int nID, int iColumn, const wchar_t* pValue);
XC_API BOOL WINAPI XAdTree_SetItemTextEx(HXCGUI hAdapter, int nID, const wchar_t* pName, const wchar_t* pValue);
XC_API BOOL WINAPI XAdTree_SetItemImage(HXCGUI hAdapter, int nID, int iColumn, HIMAGE hImage);
XC_API BOOL WINAPI XAdTree_SetItemImageEx(HXCGUI hAdapter, int nID, const wchar_t* pName, HIMAGE hImage);
XC_API const wchar_t* WINAPI XAdTree_GetItemText(HXCGUI hAdapter, int nID, int iColumn);
XC_API const wchar_t* WINAPI XAdTree_GetItemTextEx(HXCGUI hAdapter, int nID, const wchar_t* pName);
XC_API HIMAGE WINAPI XAdTree_GetItemImage(HXCGUI hAdapter, int nID, int iColumn);
XC_API HIMAGE WINAPI XAdTree_GetItemImageEx(HXCGUI hAdapter, int nID, const wchar_t* pName);
XC_API BOOL WINAPI XAdTree_DeleteItem(HXCGUI hAdapter, int nID);
XC_API void WINAPI XAdTree_DeleteItemAll(HXCGUI hAdapter);
XC_API void WINAPI XAdTree_DeleteColumnAll(HXCGUI hAdapter);
XC_API float WINAPI XEase_Linear(float pos);
XC_API float WINAPI XEase_Quad(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Cubic(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Quart(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Quint(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Sine(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Expo(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Circ(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Elastic(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Back(float pos, ease_type_ flag);
XC_API float WINAPI XEase_Bounce(float pos, ease_type_ flag);
XC_API HELE WINAPI XEditor_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API BOOL WINAPI XEditor_IsBreakpoint(HELE hEle, int iRow);
XC_API BOOL WINAPI XEditor_SetBreakpoint(HELE hEle, int iRow, BOOL bActivate=TRUE);
XC_API BOOL WINAPI XEditor_RemoveBreakpoint(HELE hEle, int iRow);
XC_API void WINAPI XEditor_ClearBreakpoint(HELE hEle);
XC_API BOOL WINAPI XEditor_SetRunRow(HELE hEle, int iRow);
XC_API void WINAPI XEditor_GetColor(HELE hEle, editor_color_* pInfo);
XC_API void WINAPI XEditor_SetColor(HELE hEle, editor_color_* pInfo);
XC_API int WINAPI XEditor_GetBreakpointCount(HELE hEle);
XC_API void WINAPI XEditor_SetTipsDelay(HELE hEle, int nDelay);
XC_API void WINAPI XEditor_SetAutoMatchMode(HELE hEle, int mode);
XC_API int WINAPI XEditor_GetBreakpoints(HELE hEle, int* aPoints, int nCount);
XC_API void WINAPI XEditor_SetCurRow(HELE hEle, int iRow);
XC_API int WINAPI XEditor_GetDepth(HELE hEle, int iRow);
XC_API int WINAPI XEditor_GetDepthEx(HELE hEle, int iRow);
XC_API int WINAPI XEditor_ToExpandRow(HELE hEle, int iRow);
XC_API void WINAPI XEditor_ExpandEx(HELE hEle, int iRow);
XC_API void WINAPI XEditor_ExpandAll(HELE hEle, BOOL bExpand);
XC_API void WINAPI XEditor_Expand(HELE hEle, int iRow, BOOL bExpand);
XC_API void WINAPI XEditor_ExpandSwitch(HELE hEle, int iRow);
XC_API void WINAPI XEditor_AddKeyword(HELE hEle, const wchar_t* pKey, int iStyle);
XC_API void WINAPI XEditor_AddConst(HELE hEle, const wchar_t* pKey);
XC_API void WINAPI XEditor_AddFunction(HELE hEle, const wchar_t* pKey);
XC_API void WINAPI XEditor_AddExcludeDefVarKeyword(HELE hEle, const wchar_t* pKeyword);