库/XCGUI/XCGUI.pas


function XAdTable_GetItemInt(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_GetItemIntEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; out pOutValue: Integer): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_GetItemFloat(hAdapter: HXCGUI; iItem: Integer; iColumn: Integer; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XAdTable_GetItemFloatEx(hAdapter: HXCGUI; iItem: Integer; pName: PWideChar; out pOutValue: Single): BOOL; stdcall; external XCGUI_DLL;

function XAdTree_Create(): HXCGUI; stdcall; external XCGUI_DLL;

function XAdTree_AddColumn(hAdapter: HXCGUI; pName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTree_SetColumn(hAdapter: HXCGUI; pColName: PWideChar): Integer; stdcall; external XCGUI_DLL;

function XAdTree_InsertItemText(hAdapter: HXCGUI; pValue: PWideChar; nParentID: Integer = XC_ID_ROOT; insertID: Integer = XC_ID_LAST): Integer; stdcall; external XCGUI_DLL;

function XAdTree_InsertItemTextEx(hAdapter: HXCGUI; pName: PWideChar; pValue: PWideChar; nParentID: Integer = XC_ID_ROOT; insertID: Integer = XC_ID_LAST): Integer; stdcall; external XCGUI_DLL;

function XAdTree_InsertItemImage(hAdapter: HXCGUI; hImage: HIMAGE; nParentID: Integer = XC_ID_ROOT; insertID: Integer = XC_ID_LAST): Integer; stdcall; external XCGUI_DLL;

function XAdTree_InsertItemImageEx(hAdapter: HXCGUI; pName: PWideChar; hImage: HIMAGE; nParentID: Integer = XC_ID_ROOT; insertID: Integer = XC_ID_LAST): Integer; stdcall; external XCGUI_DLL;

function XAdTree_GetCount(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdTree_GetCountColumn(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdTree_SetItemText(hAdapter: HXCGUI; nID: Integer; iColumn: Integer; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdTree_SetItemTextEx(hAdapter: HXCGUI; nID: Integer; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdTree_SetItemImage(hAdapter: HXCGUI; nID: Integer; iColumn: Integer; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdTree_SetItemImageEx(hAdapter: HXCGUI; nID: Integer; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdTree_GetItemText(hAdapter: HXCGUI; nID: Integer; iColumn: Integer): PWideChar; stdcall; external XCGUI_DLL;

function XAdTree_GetItemTextEx(hAdapter: HXCGUI; nID: Integer; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XAdTree_GetItemImage(hAdapter: HXCGUI; nID: Integer; iColumn: Integer): HIMAGE; stdcall; external XCGUI_DLL;

function XAdTree_GetItemImageEx(hAdapter: HXCGUI; nID: Integer; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XAdTree_DeleteItem(hAdapter: HXCGUI; nID: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XAdTree_DeleteItemAll(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

procedure XAdTree_DeleteColumnAll(hAdapter: HXCGUI); stdcall; external XCGUI_DLL;

function XAdMap_Create(): HXCGUI; stdcall; external XCGUI_DLL;

function XAdMap_AddItemText(hAdapter: HXCGUI; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdMap_AddItemImage(hAdapter: HXCGUI; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

function XAdMap_DeleteItem(hAdapter: HXCGUI; pName: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdMap_GetCount(hAdapter: HXCGUI): Integer; stdcall; external XCGUI_DLL;

function XAdMap_GetItemText(hAdapter: HXCGUI; pName: PWideChar): PWideChar; stdcall; external XCGUI_DLL;

function XAdMap_GetItemImage(hAdapter: HXCGUI; pName: PWideChar): HIMAGE; stdcall; external XCGUI_DLL;

function XAdMap_SetItemText(hAdapter: HXCGUI; pName: PWideChar; pValue: PWideChar): BOOL; stdcall; external XCGUI_DLL;

function XAdMap_SetItemImage(hAdapter: HXCGUI; pName: PWideChar; hImage: HIMAGE): BOOL; stdcall; external XCGUI_DLL;

procedure XDebug_Print(level: Integer; pInfo: PWideChar); stdcall; external XCGUI_DLL;

procedure _xtrace(pFormat: PWideChar); cdecl; external XCGUI_DLL;

procedure _xtracew(pFormat: PWideChar); cdecl; external XCGUI_DLL;

procedure XDebug_OutputDebugStringA(pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XDebug_OutputDebugStringW(pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XDebug_Set_OutputDebugString_UTF8(bUTF8: BOOL); stdcall; external XCGUI_DLL;

function XEase_Linear(p: Single): Single; stdcall; external XCGUI_DLL;

function XEase_Quad(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Cubic(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Quart(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Quint(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Sine(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Expo(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Circ(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Elastic(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Back(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEase_Bounce(p: Single; flag: ease_type_): Single; stdcall; external XCGUI_DLL;

function XEditor_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

procedure XEditor_EnableConvertChar(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XEidtor_IsEmptyRow(hEle: HELE; iRow: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEditor_IsBreakpoint(hEle: HELE; iRow: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEditor_SetBreakpoint(hEle: HELE; iRow: Integer; bActivate: BOOL = True): BOOL; stdcall; external XCGUI_DLL;

function XEditor_GetBreakpointCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEditor_SetTipsDelay(hEle: HELE; nDelay: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_SetAutoMatchSelectModel(hEle: HELE; model: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_SetAutoMatchMode(hEle: HELE; mode: Integer); stdcall; external XCGUI_DLL;

function XEditor_GetBreakpoints(hEle: HELE; out out_buffer: Integer; nCount: Integer): Integer; stdcall; external XCGUI_DLL;

function XEditor_RemoveBreakpoint(hEle: HELE; iRow: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XEditor_ClearBreakpoint(hEle: HELE); stdcall; external XCGUI_DLL;

function XEditor_SetRunRow(hEle: HELE; iRow: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XEditor_GetColor(hEle: HELE; out pInfo: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_SetColor(hEle: HELE; pInfo: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_SetCurRow(hEle: HELE; iRow: Integer); stdcall; external XCGUI_DLL;

function XEditor_GetDepth(hEle: HELE; iRow: Integer): Integer; stdcall; external XCGUI_DLL;

function XEditor_GetDepthEx(hEle: HELE; iRow: Integer): Integer; stdcall; external XCGUI_DLL;

function XEditor_ToExpandRow(hEle: HELE; iRow: Integer): Integer; stdcall; external XCGUI_DLL;

procedure XEditor_ExpandAll(hEle: HELE; bExpand: BOOL); stdcall; external XCGUI_DLL;

procedure XEditor_Expand(hEle: HELE; iRow: Integer; bExpand: BOOL); stdcall; external XCGUI_DLL;

procedure XEditor_ExpandSwitch(hEle: HELE; iRow: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_ExpandEx(hEle: HELE; iRow: Integer); stdcall; external XCGUI_DLL;

function XEditor_GetExpandState(hEle: HELE): PAnsiChar; stdcall; external XCGUI_DLL;

function XEditor_SetExpandState(hEle: HELE; pString: PAnsiChar): BOOL; stdcall; external XCGUI_DLL;

procedure XEditor_AddKeyword(hEle: HELE; pKey: PWideChar; iStyle: Integer); stdcall; external XCGUI_DLL;

procedure XEditor_AddConst(hEle: HELE; pKey: PWideChar); stdcall; external XCGUI_DLL;

procedure XEditor_AddFunction(hEle: HELE; pKey: PWideChar); stdcall; external XCGUI_DLL;

procedure XEditor_AddExcludeDefVarKeyword(hEle: HELE; pKeyword: PWideChar); stdcall; external XCGUI_DLL;

procedure XEditor_FunArgsExpand_AddArg(hEle: HELE; pTypeName: PWideChar; pArgName: PWideChar; pText: PWideChar); stdcall; external XCGUI_DLL;

procedure XEditor_FunArgsExpand_Expand(hEle: HELE; pFunName: PWideChar; iRow: Integer; iCol: Integer; iCol2: Integer; nDepth: Integer); stdcall; external XCGUI_DLL;

function XEdit_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function XEdit_CreateEx(x: Integer; y: Integer; cx: Integer; cy: Integer; type_: edit_type_; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

procedure XEdit_EnableAutoWrap(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEdit_EnableReadOnly(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEdit_EnableMultiLine(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEdit_EnablePassword(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEdit_EnableAutoSelAll(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEdit_EnableAutoCancelSel(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XEdit_IsReadOnly(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IsMultiLine(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IsPassword(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IsAutoWrap(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IsEmpty(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IsInSelect(hEle: HELE; iRow: Integer; iCol: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEdit_GetRowCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetData(hEle: HELE): Pedit_data_copy_; stdcall; external XCGUI_DLL;

procedure XEdit_AddData(hEle: HELE; pData, styleTable: Tedit_data_copy_; nStyleCount: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_FreeData(pData: Pedit_data_copy_); stdcall; external XCGUI_DLL;

procedure XEdit_SetDefaultText(hEle: HELE; pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XEdit_SetDefaultTextColor(hEle: HELE; color: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetPasswordCharacter(hEle: HELE; ch: WideChar); stdcall; external XCGUI_DLL;

procedure XEdit_SetTextAlign(hEle: HELE; align: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetTabSpace(hEle: HELE; nSpace: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetText(hEle: HELE; pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XEdit_SetTextInt(hEle: HELE; nValue: Integer); stdcall; external XCGUI_DLL;

function XEdit_GetText(hEle: HELE; pOut: PWideChar; nOutlen: Integer): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetTextRow(hEle: HELE; iRow: Integer; out pOut: PWideChar; nOutlen: Integer): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetLength(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetLengthRow(hEle: HELE; iRow: Integer): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetAt(hEle: HELE; iRow: Integer; iCol: Integer): WideChar; stdcall; external XCGUI_DLL;

procedure XEdit_InsertText(hEle: HELE; iRow: Integer; iCol: Integer; pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XEdit_AddText(hEle: HELE; pString: PWideChar); stdcall; external XCGUI_DLL;

procedure XEdit_AddTextEx(hEle: HELE; pString: PWideChar; iStyle: Integer); stdcall; external XCGUI_DLL;

function XEdit_AddObject(hEle: HELE; hObj: HXCGUI): Integer; stdcall; external XCGUI_DLL;

procedure XEdit_AddByStyle(hEle: HELE; iStyle: Integer); stdcall; external XCGUI_DLL;

function XEdit_AddStyle(hEle: HELE; hFont_image_Obj: HXCGUI; color: Integer; bColor: BOOL): Integer; stdcall; external XCGUI_DLL;
